force-app/main/default/objects/ServiceAppointment/fields/Assigned_Crew_Count__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Crew_Count__c</fullName>
    <label>Assigned Crew Count</label>
    <type>Summary</type>
    <summaryForeignKey>AssignedResource.ServiceAppointmentId</summaryForeignKey>
    <summaryOperation>COUNT</summaryOperation>
</CustomField>