force-app/main/default/objects/ServiceAppointment/fields/Crew_Required__c.field-meta.xml
<CustomField>
    <fullName>Crew_Required__c</fullName>
    <label>Crew Required</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>