force-app/main/default/objects/ServiceAppointment/fields/Crew_Staffing_Status__c.field-meta.xml
<CustomField>
    <fullName>Crew_Staffing_Status__c</fullName>
    <label>Crew Staffing Status</label>
    <type>Text</type>
    <formula>TEXT(Assigned_Crew_Count__c) &amp; " / " &amp; TEXT(BLANKVALUE(Crew_Required__c, 0)) &amp; " crew assigned"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>